<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/whitesmoke">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:layout_marginTop="20dp"
        android:background="@color/white">
        <TextView
            android:id="@+id/tv_item_internet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/res_internet"
            android:gravity="center"
            android:drawableTop="@mipmap/item_internet"
            android:onClick="onClick"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/whitesmoke"/>
        <TextView
            android:id="@+id/tv_item_sync"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/res_sync"
            android:gravity="center"
            android:drawableTop="@mipmap/item_sync"
            android:onClick="onClick"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/whitesmoke"/>
        <TextView
            android:id="@+id/tv_item_local"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/res_local"
            android:gravity="center"
            android:drawableTop="@mipmap/item_local"
            android:onClick="onClick"/>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</FrameLayout>